# GoalAPI/app/Http/Requests/Auth/RegisterRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class RegisterRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|string|email|max:100|unique:users',
+            'nickname' => 'required|string|between:3,100|unique:users',
+            'password' => 'required|string|min:6',
+            'name' => 'nullable|string',
+            'description' => 'nullable|string',
+        ];
+    }
+}
