# GoalFront/src/screens/Auth/Login/types.ts
@@ -1,0 +1,10 @@
+export interface ILogin
+{
+  email: string;
+  password: string;
+}
+
+export interface IAuthResult
+{
+  access_token: string
+}
