# GoalFront/src/screens/Auth/Register/types.ts
@@ -1,0 +1,7 @@
+export interface IRegister
+{
+  nickname: string;
+  email: string;
+  password: string;
+}
+
